# mlcbakery

./: .coveragerc  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.example  Dockerfile  Dockerfile.bakery  Dockerfile.caddy  Dockerfile.mcp  README.md  VERSIONING.md  alembic.ini  cloudbuild.yaml  conftest.py  docker-compose.with-otel.yml  docker-compose.with-streamlit.yml  docker-compose.yml  env.example  otel-collector-config.yaml  pyproject.toml  scratch.ipynb  setup_db.sh  test_api.sh
.claude/: settings.local.json
.github/workflows/: ci-coverage.yml  docker-build-only.yml  publish.yml  release_tagger.yml  test.yml
alembic/: env.py
alembic/versions/: 0543e6fa7fe0_add_preview_fields_to_datasets.py  1083fbe84b7c_refactor_entity_activity_provenance.py  1ef1e530c8f2_add_activity_name_to_entity_.py  1ff18408a21e_add_dataset_activity_agent_and_.py  20240329_add_metadata_to_trained_models.py  20240329_move_collection_id_to_entities.py  20240508_add_cloud_storage_info_to_collections.py  23a3b6e6f8ce_add_polymorphic_entities_and_activity_.py  2722da380e4c_create_default_owner_agents_for_.py  2f7964e65c3c_add_cascade_delete_to_entity_version_tags_fk.py  4857e3e86526_add_entity_versioning_with_continuum.py  56c293e00d69_add_auth_org_id_column_to_collections_.py  5a6b7765ddca_add_remote_addr_to_transaction_table.py  5f64b76e30ce_make_activity_name_nullable_in_entity_.py  8d98d7b90f62_add_has_file_uploads_field_to_tasks.py  94708fa90b99_add_has_file_uploads_to_tasks_version_.py  9b9965a010e9_migrate_json_to_jsonb.py  a8d17ae79ee1_.py  a9466fc7d6f6_add_collection_id_foreign_key_to_agents.py  aa3356eec3d9_merge_heads.py  ad22ca157966_add_api_keys_table.py  b58ad412267d_add_environment_variables_to_collections.py  c30f195dcd11_add_is_private_to_version_tables.py  c4f5e6d7a8b9_add_is_private_field_to_entities.py  da6221ce34cb_add_dataset_metadata_json_field_to_.py  dbf19ccb0d34_add_created_at_to_agents.py  e211cb8179a3_add_asset_origin_to_entities.py  e2387980722e_create_entities_table.py  e44c37f17887_add_owner_to_collections.py  e99aa040f905_add_tasks_table.py  ef9943217125_merge_again.py  f1a2b3c4d5e6_add_croissant_metadata_to_entities.py  fe0cf3d69b11_modify_trained_model_schema_remove_.py  refactor_activity_to_use_entities.py
cli/: README.md  bakery_cli.py  build_index.py
mcp_server/: README.md  main.py  tools.py
mcp_server/templates/: download_dataset_huggingface.py.template  help.md
migrations/: env.py
migrations/versions/: da6221ce34cb_add_dataset_metadata_json_field_to_.py  e2387980722e_create_entities_table.py  ee61cdd5b42a_add_collections_table_and_update_.py
mlcbakery/: bakery_client.py  croissant_validation.py  database.py  jwt.py  main.py  models.py  search.py  utils.py  version_manager.py
mlcbakery/api/: __init__.py  access_level.py  dependencies.py
mlcbakery/api/endpoints/: activities.py  agents.py  api_keys.py  (+8 more)
mlcbakery/auth/: admin_token_strategy.py  jwks_strategy.py  jwt_strategy.py  passthrough_strategy.py
mlcbakery/database/: database.py
mlcbakery/mcp/: tools.py
mlcbakery/models/: models.py
mlcbakery/schemas/: activity.py  agent.py  collection.py  dataset.py  entity.py  storage.py  task.py  trained_model.py  version.py
mlcbakery/storage/: __init__.py  gcp.py
mlcbakery/webclient/: client.py  dataset_viewer.py
notebooks/: models.ipynb  provenance.ipynb  scratch.ipynb  tasks.ipynb  versioning.ipynb
scripts/: run_migration_prod.sh
tests/: conftest.py  test_activities.py  test_agents.py  test_api_keys.py  test_bakery_client.py  test_bakery_client_local.py  test_bakery_client_models.py  test_collections_api.py  test_croissant_validation.py  test_dataset_dependencies.py  test_dataset_upstream.py  test_datasets.py  test_dependencies.py  test_endpoints_coverage.py  test_entities.py  test_entity_relationships.py  test_gcp.py  test_is_private.py  test_search_privacy_filtering.py  test_storage.py  test_task_client.py  test_task_details_api.py  test_task_schema.py  test_tasks_api.py  test_trained_model_schema.py  test_trained_models.py  test_trained_models_api.py  test_trained_models_coverage.py  test_version_history_api.py  test_versioning_with_is_private.py
tests/data/: valid_mlcroissant.json
tests/unit/: conftest.py  test_bakery_client.py
tools/production-migration/: README.md
(+4 files in other folders)
