[project]
name = "mlcbakery"
version = "0.1.0"
description = "A machine learning data and model management system with provenance tracking"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.poetry]
name = "mlcbakery"
version = "0.1.0"
description = "A machine learning data and model management system with provenance tracking"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic = "^2.6.1"
python-dotenv = "^1.0.0"
alembic = "^1.15.1"
python-multipart = "^0.0.20"
mcp = {extras = ["cli"], version = "^1.6.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
httpx = "^0.28.0"
mypy = "^1.8.0"

[tool.poetry.group.webclient.dependencies]
streamlit = "^1.32.0"
pandas = "^2.2.0"
mlcroissant = "^1.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 