[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.poetry]
name = "mlcbakery"
version = "0.1.2"
description = "A machine learning data and model management system with provenance tracking"
authors = ["Jonathan Lebensold <jon@jetty.io>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.12"
uvicorn = ">=0.34.2"
sqlalchemy = ">=2.0.40"
asyncpg = ">=0.30.0"
pydantic = "^2.6.1"
python-dotenv = "^1.0.0"
alembic = ">=1.15.2"
python-multipart = "^0.0.20"
fastmcp = {version = "^2.3.4"}
google-cloud-storage = "^3.1.0"
opentelemetry-api = ">=1.33.0"
opentelemetry-sdk = ">=1.33.0"
opentelemetry-exporter-gcp-monitoring = "==1.9.0a0"
opentelemetry-exporter-gcp-trace = "==1.9.0"
opentelemetry-exporter-otlp = ">=1.33.1"
opentelemetry-instrumentation-fastapi = ">=0.54b1"

# Added from [project.dependencies]
aiosqlite = ">=0.21.0"
func-timeout = ">=4.3.5"
google = ">=3.0.0"
greenlet = ">=3.2.1"
httpx = ">=0.28.1"
mlcroissant = ">=1.0.17"
pandas = ">=2.2.3"
pyarrow = ">=19.0.1"
requests = ">=2.32.3"
starlette = ">=0.46.2"
typesense = ">=1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = ">=0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"
mypy = "^1.8.0"

[tool.poetry.group.mcp.dependencies]
fastmcp = "^2.3.4"

[tool.poetry.group.webclient.dependencies]
streamlit = "^1.32.0"

[tool.uv.workspace]
members = [
    "venv",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 
